<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:id="@+id/result_txv_name"
        android:text="氏名が表示されます。"
        android:layout_marginBottom="@dimen/title_marginBottom"
        android:textColor="#FFF67BA5"
        android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/result_txv_netc"
            android:text="さんの占い結果"
            android:textSize="25dp"
            android:textColor="#FFF67BA5" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_un"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="@dimen/title_marginBottom"
        android:textColor="#FFF67BA5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:id="@+id/result_txv_divine"
        android:text="ここに占い結果が表示されます。"
        android:layout_marginBottom="@dimen/title_marginBottom"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_add"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="@dimen/title_marginBottom"
        android:textColor="#FFF67BA5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:id="@+id/result_txv_add"
        android:text="ここにアドバイスが表示されます"
        android:layout_marginBottom="@dimen/title_marginBottom"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:id="@+id/result_txv_abo"
        android:text="ここに血液型が表示されます。"
        android:layout_marginBottom="@dimen/title_marginBottom"
        android:textColor="#FFF67BA5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFF67BA5"
            android:textSize="18dp"
            android:text="さんは"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:id="@+id/result_txv_aboA"
        android:text="ここに血液型別アドバイスが表示されます。"
        android:layout_marginBottom="@dimen/title_marginBottom"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btn_mdr"
        android:id="@+id/main_btn_mdr"
        android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>